{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 46,
  "lineage": "0543ac2c-f69c-d1b9-56c7-353423deb2c7",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:979117655628:instance/i-0d5c184b05c1388e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5c184b05c1388e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049db463d5e203945",
            "private_dns": "ip-10-0-2-97.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c50d29c2be150691",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034a2e7ca460f40c9",
            "tags": {
              "Name": "private-instance1"
            },
            "tags_all": {
              "Name": "private-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002399f1ab1aab0df"
            ]
          },
          "dependencies": [
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet1",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:979117655628:instance/i-04c510825b4ac034a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c510825b4ac034a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072e46dc9d69aafe9",
            "private_dns": "ip-10-0-3-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc1a756431800bb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d4b0a624d1e11ae",
            "tags": {
              "Name": "private-instance2"
            },
            "tags_all": {
              "Name": "private-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002399f1ab1aab0df"
            ]
          },
          "dependencies": [
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:979117655628:instance/i-0363509629e59e855",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0363509629e59e855",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051f8f75756bacb10",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-34-205-92-17.compute-1.amazonaws.com",
            "public_ip": "34.205.92.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0268a2e66eafe6feb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097f2685f7ba64af7",
            "tags": {
              "Name": "public-instance2"
            },
            "tags_all": {
              "Name": "public-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002399f1ab1aab0df"
            ]
          },
          "dependencies": [
            "module.modules.aws_lb.private-lb",
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc37539f178f297a",
            "association_id": "eipassoc-0f344907e435fe589",
            "domain": "vpc",
            "id": "eipalloc-0fc37539f178f297a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01a645196a3ca4668",
            "private_dns": "ip-10-0-0-233.ec2.internal",
            "private_ip": "10.0.0.233",
            "public_dns": "ec2-44-209-142-200.compute-1.amazonaws.com",
            "public_ip": "44.209.142.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:internet-gateway/igw-0c3177789b31b3f49",
            "id": "igw-0c3177789b31b3f49",
            "owner_id": "979117655628",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/priv-lb/4a5b02e46d63488b",
            "arn_suffix": "app/priv-lb/4a5b02e46d63488b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-priv-lb-1628999214.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/priv-lb/4a5b02e46d63488b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "priv-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002399f1ab1aab0df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-034a2e7ca460f40c9"
              },
              {
                "subnet_id": "subnet-09d4b0a624d1e11ae"
              }
            ],
            "subnets": [
              "subnet-034a2e7ca460f40c9",
              "subnet-09d4b0a624d1e11ae"
            ],
            "tags": {
              "Name": "private-lb"
            },
            "tags_all": {
              "Name": "private-lb"
            },
            "vpc_id": "vpc-0dc380842cb5f6989",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet1",
            "module.modules.aws_subnet.private_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/pub-lb/9acf22ea911a04b7",
            "arn_suffix": "app/pub-lb/9acf22ea911a04b7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-lb-611201331.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/pub-lb/9acf22ea911a04b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002399f1ab1aab0df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e17d6a5e7c5ec7c"
              },
              {
                "subnet_id": "subnet-097f2685f7ba64af7"
              }
            ],
            "subnets": [
              "subnet-02e17d6a5e7c5ec7c",
              "subnet-097f2685f7ba64af7"
            ],
            "tags": {
              "Name": "public-lb"
            },
            "tags_all": {
              "Name": "public-lb"
            },
            "vpc_id": "vpc-0dc380842cb5f6989",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.public_subnet1",
            "module.modules.aws_subnet.public_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:listener/app/pub-lb/9acf22ea911a04b7/40612b692915365d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/pub-targetGroup/a084f6893eb2045a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:listener/app/pub-lb/9acf22ea911a04b7/40612b692915365d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/pub-lb/9acf22ea911a04b7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_lb.public-lb",
            "module.modules.aws_lb_target_group.publicgroup",
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.public_subnet1",
            "module.modules.aws_subnet.public_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:listener/app/priv-lb/4a5b02e46d63488b/3f8c2b878a5c5b7e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:listener/app/priv-lb/4a5b02e46d63488b/3f8c2b878a5c5b7e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:loadbalancer/app/priv-lb/4a5b02e46d63488b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_lb.private-lb",
            "module.modules.aws_lb_target_group.privategroup",
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet1",
            "module.modules.aws_subnet.private_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "privategroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619",
            "arn_suffix": "targetgroup/private-target-Group/fa851d583593e619",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "private-target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "private-target-group"
            },
            "tags_all": {
              "Name": "private-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "publicgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/pub-targetGroup/a084f6893eb2045a",
            "arn_suffix": "targetgroup/pub-targetGroup/a084f6893eb2045a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/pub-targetGroup/a084f6893eb2045a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pub-targetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "public-target-group"
            },
            "tags_all": {
              "Name": "public-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619-20230208200328916400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619",
            "target_id": "i-0d5c184b05c1388e2"
          },
          "dependencies": [
            "module.ec2.aws_instance.private-instance1",
            "module.modules.aws_lb_target_group.privategroup",
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet1",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619-20230208200330539300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979117655628:targetgroup/private-target-Group/fa851d583593e619",
            "target_id": "i-04c510825b4ac034a"
          },
          "dependencies": [
            "module.ec2.aws_instance.private-instance2",
            "module.modules.aws_lb_target_group.privategroup",
            "module.modules.aws_security_group.secgroup",
            "module.modules.aws_subnet.private_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-proxy1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-proxy2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc37539f178f297a",
            "connectivity_type": "public",
            "id": "nat-01783a86890d28b4f",
            "network_interface_id": "eni-01a645196a3ca4668",
            "private_ip": "10.0.0.233",
            "public_ip": "44.209.142.200",
            "subnet_id": "subnet-02e17d6a5e7c5ec7c",
            "tags": {
              "Name": "natway1"
            },
            "tags_all": {
              "Name": "natway1"
            }
          },
          "dependencies": [
            "module.modules.aws_eip.eip",
            "module.modules.aws_internet_gateway.igw",
            "module.modules.aws_subnet.public_subnet1",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c3177789b31b3f49",
            "id": "r-rtb-01c92d4bc38c922001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c92d4bc38c92200",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_internet_gateway.igw",
            "module.modules.aws_route_table.public-route",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route",
      "name": "natgw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee8b5c25291c421f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01783a86890d28b4f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee8b5c25291c421f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_nat_gateway.nat-gw",
            "module.modules.aws_route_table.private-route"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:route-table/rtb-0ee8b5c25291c421f",
            "id": "rtb-0ee8b5c25291c421f",
            "owner_id": "979117655628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01783a86890d28b4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:route-table/rtb-01c92d4bc38c92200",
            "id": "rtb-01c92d4bc38c92200",
            "owner_id": "979117655628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3177789b31b3f49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b139cb3ee4edcb",
            "route_table_id": "rtb-0ee8b5c25291c421f",
            "subnet_id": "subnet-034a2e7ca460f40c9"
          },
          "dependencies": [
            "module.modules.aws_route_table.private-route",
            "module.modules.aws_subnet.private_subnet1",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4a5475a2ec9b8c",
            "route_table_id": "rtb-0ee8b5c25291c421f",
            "subnet_id": "subnet-09d4b0a624d1e11ae"
          },
          "dependencies": [
            "module.modules.aws_route_table.private-route",
            "module.modules.aws_subnet.private_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09417ce2795f34b61",
            "route_table_id": "rtb-01c92d4bc38c92200",
            "subnet_id": "subnet-02e17d6a5e7c5ec7c"
          },
          "dependencies": [
            "module.modules.aws_route_table.public-route",
            "module.modules.aws_subnet.public_subnet1",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a650900c2444a74",
            "route_table_id": "rtb-01c92d4bc38c92200",
            "subnet_id": "subnet-097f2685f7ba64af7"
          },
          "dependencies": [
            "module.modules.aws_route_table.public-route",
            "module.modules.aws_subnet.public_subnet2",
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:security-group/sg-002399f1ab1aab0df",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002399f1ab1aab0df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230208200243203400000001",
            "name_prefix": "terraform-",
            "owner_id": "979117655628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:subnet/subnet-034a2e7ca460f40c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034a2e7ca460f40c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979117655628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:subnet/subnet-09d4b0a624d1e11ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d4b0a624d1e11ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979117655628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:subnet/subnet-02e17d6a5e7c5ec7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e17d6a5e7c5ec7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979117655628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:subnet/subnet-097f2685f7ba64af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097f2685f7ba64af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979117655628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-0dc380842cb5f6989"
          },
          "dependencies": [
            "module.modules.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979117655628:vpc/vpc-0dc380842cb5f6989",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c2dfb101a287b9b",
            "default_route_table_id": "rtb-081bdb27fa8cac7af",
            "default_security_group_id": "sg-01a1b5c0821c1380f",
            "dhcp_options_id": "dopt-07ecaea61d2a6acbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc380842cb5f6989",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081bdb27fa8cac7af",
            "owner_id": "979117655628",
            "tags": {
              "Name": "MainVpc"
            },
            "tags_all": {
              "Name": "MainVpc"
            }
          }
        }
      ]
    }
  ]
}